--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
           <a href="#">Hire me</a>
           <a href="#">Let's Talk</a>
         </div> 
+        <div class="icons">
+          <a class="icon" href="https://github.com/samarpitadas"><i class="fa-brands fa-github"></i></a>
+          <a class="icon" href="https://www.linkedin.com/in/samarpita-das-94809b279?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" ><i class="fa-brands fa-linkedin"></i></a>
+          <a class="icon" href="https://www.instagram.com/x_samarpita_x/?next=%2F"><i class="fa-brands fa-instagram"></i></a>
+        </div>
     </div>
   </section>
   <div class="separation"></div>
@@ -116,8 +121,6 @@
       <div class="heading">Email</div>
       <div>2023csb111.samarpita@students.iiests.ac.in</div>
     </div>
-    <a class="icon" href="https://github.com/samarpitadas"><i class="fa-brands fa-github"></i></a>
-    <a class="icon" href="https://www.linkedin.com/in/samarpita-das-94809b279?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" ><i class="fa-brands fa-linkedin"></i></a>
   </section>
 </body>
 </html>
